7 hours : Renamed method
